Removed redundant .sh and .bat